# wellread

./: .gitignore  README.md  config.json  feeds.txt  install-hooks.sh  package.json  pyproject.toml  rss_reference_list_DONT_USE_ALL.txt  topics.txt
.github/workflows/: daily-digest.yml
hooks/: pre-commit
scripts/: test.sh
src/: __init__.py  article_cache.py  curator.js  curator.py  index.js  main.py  rss-parser.js  rss_parser.py  slack-poster.js  slack_poster.py  summarizer.js  summarizer.py
